--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World</h2>
+  <ul class="quotes">
+    <% for(var i=0; i<quotes.length; i++) {%>
+      <li class="quote">
+        <span><%= quotes[i].name %></span>
+        <span><%= quotes[i].quote %></span>
+      </li>
+    <% } %>
+  </ul>
   <form action="/quotes" method="POST">
   <input type="text" placeholder="name" name="name">
   <input type="text" placeholder="quote" name="quote">
