--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,11 @@
   <input type="text" placeholder="name" name="name">
   <input type="text" placeholder="quote" name="quote">
   <button type="submit">Submit</button>
+  <div>
+    <button id="update"> Darth Vadar invades! </button>
+    <button id="delete"> Delete first Darth Vadar quote </button>
+  </div>
+  <script src="main.js"></script>
 </form>
 </body>
 </html>
