--- a/Financias/app/views/index.ejs
+++ b/Financias/app/views/index.ejs
@@ -10,6 +10,9 @@
   <title>Financias</title>
 </head>
 <body>
+  <% if (sessionId) {%>
+    <div class="alert alert-success">AEEE POHAAA VOCE TA LOGADO</div>
+  <%}%>
   <section class="despesas container table-responsive">
     <table class="table table-hover">
       <thead>
