--- a/Financias/app/views/login.ejs
+++ b/Financias/app/views/login.ejs
@@ -5,15 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://use.fontawesome.com/1597db2c5a.js"></script>
-  <link rel="stylesheet" href="css/import.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+  <link rel="stylesheet" href="../public/css/import.css">
   <title>Financias</title>
 </head>
 <body>
+  <header class="header">
+    <ul class="header-lista">
+      <li class="header-lista-item"><a href="/perfil" class="header-lista-link">Meu Perfil</a></li>
+      <li class="header-lista-item"><a href="#" class="header-lista-link">Minha Carteira</a></li>
+      <li class="header-lista-item"><a href="/despesas" class="header-lista-link">Minhas Despesas</a></li>
+      <li class="header-lista-item"><a href="/cadastro" class="header-lista-link">Cadastrar</a></li>
+      <li class="header-lista-item"><a href="/login" class="header-lista-link">Logar</a></li>
+    </ul>
+  </header>
   <section class="container login">
-    <% if (sessionId) {%>
+    <!-- <% if (sessionId) {%> -->
       <div class="alert alert-success">AEEE POHAAA VOCE TA LOGADO</div>
-    <%}%>
+      <form action="/login/deslogar" method="get">
+        <button type="submit" class="btn btn-lg btn-success">Deslogar</button>
+      </form>
+    <!-- <%}%> -->
     <h1 class="text-center">Tela de Login</h1>
     <form class="form-horizontal" action="/login/logar" method="post">
       <div class="form-group row">
