--- a/Financias/app/public/css/despesas.css
+++ b/Financias/app/public/css/despesas.css
@@ -1,3 +1,6 @@
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
 .despesas .table-hover tbody tr:hover td {
   background: rgba(0, 128, 0, 0.1);
 }
