--- a/Financias/app/public/css/header.css
+++ b/Financias/app/public/css/header.css
@@ -1,8 +1,16 @@
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
 .header {
-  background-color: rgba(0, 0, 255, 0.2);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fefefe;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -14,8 +22,42 @@
 }
 
 .header-lista-link {
-  color: #2196F3;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
-  font-weight: 300;
+  color: #888;
+  display: inline-block;
+  padding: 0 20px;
+  text-decoration: none;
+  -webkit-transition: color 300ms;
+  transition: color 300ms;
+}
+
+.header-lista-link:hover {
+  color: #ccc;
+}
+
+.header-lista-item:not(:first-of-type) .header-lista-link {
+  background: -webkit-linear-gradient(top, #888, #888) no-repeat left center/1px 100%;
+  background: linear-gradient(to bottom, #888, #888) no-repeat left center/1px 100%;
+  padding-left: 21px;
+}
+
+.header-logado {
+  margin-left: 50px;
+}
+
+.header-logado-texto, .header-logado-deslogar {
+  display: inline-block;
+}
+
+.header-logado-deslogar {
+  background: -webkit-linear-gradient(top, #111111, #111111) no-repeat left center/1px 100%;
+  background: linear-gradient(to bottom, #111111, #111111) no-repeat left center/1px 100%;
+  padding-left: 21px;
+  margin-left: 20px;
+  -webkit-transition: color 300ms;
+  transition: color 300ms;
+}
+
+.header-logado-deslogar:hover {
+  color: red;
+  text-decoration: none;
 }
