--- a/Financias/app/public/css/import.css
+++ b/Financias/app/public/css/import.css
@@ -58,15 +58,107 @@ a {
   text-decoration: none;
 }
 
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
 body {
-  background-color: #C63D0F;
+  background-color: #9099a2;
 }
 
+/* DIV LIMITE */
+@media (max-width: 640px) {
+  .limite {
+    height: 100%;
+    overflow: hidden;
+    padding: 20px;
+    width: 100%;
+  }
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+  .limite {
+    height: 100%;
+    overflow: hidden;
+    padding: 40px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .limite {
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1000px;
+    overflow: hidden;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1441px) and (max-width: 1920px) {
+  .limite {
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1400px;
+    overflow: hidden;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1921px) {
+  .limite {
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1600px;
+    overflow: hidden;
+    width: 100%;
+  }
+}
+
+/* FONT-SIZE */
+html {
+  font-size: 16px;
+}
+
+@media (min-width: 800px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 1200px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+h1 {
+  font-size: 3.157em;
+}
+
+h2 {
+  font-size: 2.369em;
+}
+
+h3 {
+  font-size: 1.777em;
+}
+
+h4 {
+  font-size: 1.333em;
+}
+
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
 .header {
-  background-color: rgba(0, 0, 255, 0.2);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fefefe;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -78,12 +170,49 @@ body {
 }
 
 .header-lista-link {
-  color: #2196F3;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
-  font-weight: 300;
+  color: #888;
+  display: inline-block;
+  padding: 0 20px;
+  text-decoration: none;
+  -webkit-transition: color 300ms;
+  transition: color 300ms;
 }
 
+.header-lista-link:hover {
+  color: #ccc;
+}
+
+.header-lista-item:not(:first-of-type) .header-lista-link {
+  background: -webkit-linear-gradient(top, #888, #888) no-repeat left center/1px 100%;
+  background: linear-gradient(to bottom, #888, #888) no-repeat left center/1px 100%;
+  padding-left: 21px;
+}
+
+.header-logado {
+  margin-left: 50px;
+}
+
+.header-logado-texto, .header-logado-deslogar {
+  display: inline-block;
+}
+
+.header-logado-deslogar {
+  background: -webkit-linear-gradient(top, #111111, #111111) no-repeat left center/1px 100%;
+  background: linear-gradient(to bottom, #111111, #111111) no-repeat left center/1px 100%;
+  padding-left: 21px;
+  margin-left: 20px;
+  -webkit-transition: color 300ms;
+  transition: color 300ms;
+}
+
+.header-logado-deslogar:hover {
+  color: red;
+  text-decoration: none;
+}
+
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
 .despesas .table-hover tbody tr:hover td {
   background: rgba(0, 128, 0, 0.1);
 }
@@ -91,3 +220,83 @@ body {
 .despesas .ativo {
   background: green;
 }
+
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
+.login {
+  font-family: "Ubuntu", sans-serif;
+  height: calc(100vh - 85px);
+  padding: 40px 0;
+  width: 100%;
+}
+
+.login-limite {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.login-titulo {
+  margin-bottom: 40px;
+}
+
+.login-formulario-campo {
+  border: 1px solid #999;
+  border-radius: 5px;
+  color: #111111;
+  display: block;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 15px;
+  margin-bottom: 20px;
+  padding: 10px 8px;
+  width: 400px;
+}
+
+.login-formulario-campo::-webkit-input-placeholder {
+  color: #111111;
+}
+
+.login-formulario-campo::-moz-placeholder {
+  color: #111111;
+}
+
+.login-formulario-campo:-ms-input-placeholder {
+  color: #111111;
+}
+
+.login-formulario-campo::placeholder {
+  color: #111111;
+}
+
+.login-formulario-btn {
+  background: #00C851;
+  border: 1px solid #007E33;
+  border-radius: 3px;
+  color: #fefefe;
+  display: block;
+  font-size: 16px;
+  margin: 0 auto;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  -webkit-transition: background 300ms;
+  transition: background 300ms;
+}
+
+.login-formulario-btn:hover {
+  background: #007E33;
+}
+
+/* Variaveis */
+/* Mixins */
+/* Media Querys */
