--- a/Financias/app/public/css/login.css
+++ b/Financias/app/public/css/login.css
@@ -64,7 +64,7 @@
   display: block;
   font-size: 16px;
   margin: 0 auto;
-  padding: 10px 30px;
+  padding: 11px 30px 9px;
   text-transform: uppercase;
   -webkit-transition: background 300ms;
   transition: background 300ms;
