--- a/Financias/app/public/scss/cadastro.scss
+++ b/Financias/app/public/scss/cadastro.scss
@@ -1,1 +1,17 @@
 @import 'utilitarios';
+
+.cadastro{
+  font-family:$fonteB; height:calc(100vh - 85px); padding:40px 0; width:100%;
+
+  &-limite{align-items:center; display:flex; flex-direction:column; justify-content:center;}
+
+  &-titulo{margin-bottom:40px;}
+
+  &-formulario{
+    &-campo             {border:1px solid #999; border-radius:5px; color:$preto; display:block; font-family:$fonteB; font-size:15px; margin-bottom:10px; padding:10px 8px; width:400px;}
+    &-campo::placeholder{color:$preto;}
+
+    &-btn      {background:#00C851; border:1px solid #007E33; border-radius:3px; color:$branco; display:block; font-size:16px; margin:0 auto; padding:11px 30px 9px; text-transform:uppercase; transition:background 300ms;}
+    &-btn:hover{background:#007E33;}
+  }
+}
