--- a/Financias/app/public/scss/login.scss
+++ b/Financias/app/public/scss/login.scss
@@ -8,10 +8,10 @@
   &-titulo{margin-bottom:40px;}
 
   &-formulario{
-    &-campo{border:1px solid #999; border-radius:5px; color:$preto; display:block; font-family:$fonteB; font-size:15px; margin-bottom:20px; padding:10px 8px; width:400px;}
+    &-campo             {border:1px solid #999; border-radius:5px; color:$preto; display:block; font-family:$fonteB; font-size:15px; margin-bottom:20px; padding:10px 8px; width:400px;}
     &-campo::placeholder{color:$preto;}
 
-    &-btn      {background:#00C851; border:1px solid #007E33; border-radius:3px; color:$branco; display:block; font-size:16px; margin:0 auto; padding:10px 30px; text-transform:uppercase; transition:background 300ms;}
+    &-btn      {background:#00C851; border:1px solid #007E33; border-radius:3px; color:$branco; display:block; font-size:16px; margin:0 auto; padding:11px 30px 9px; text-transform:uppercase; transition:background 300ms;}
     &-btn:hover{background:#007E33;}
   }
 }
