Cadastro agora mostra se o usuario ja existe no banco

--- a/Financias/app/public/css/cadastro.css
+++ b/Financias/app/public/css/cadastro.css
@@ -22,6 +22,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
 }
 
 .cadastro-titulo {
@@ -72,4 +73,15 @@
 
 .cadastro-formulario-btn:hover {
   background: #007E33;
+}
+
+.cadastro-erro {
+  background-color: #ff4444;
+  color: #fefefe;
+  font-size: 15px;
+  left: 0;
+  padding: 20px 10px;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
