--- a/Financias/app/views/login.ejs
+++ b/Financias/app/views/login.ejs
@@ -30,7 +30,7 @@
       <h2 class="login-titulo">Tela de Login</h2>
       <form class="login-formulario" action="/login/logar" method="post">
         <input class="login-formulario-campo" type="text" id="inputUsuario" name="usuario" placeholder="Digite seu usuario" required>
-        <input class="login-formulario-campo" type="text" id="inputSenha" name="senha" placeholder="Digite sua senha" required>
+        <input class="login-formulario-campo" type="password" id="inputSenha" name="senha" placeholder="Digite sua senha" required>
         <button type="submit" class="login-formulario-btn">Logar</button>
       </form>
     </div>
