--- a/Financias/app/views/cadastro.ejs
+++ b/Financias/app/views/cadastro.ejs
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://use.fontawesome.com/1597db2c5a.js"></script>
   <link rel="stylesheet" href="css/import.css">
   <title>Financias</title>
 </head>
@@ -27,12 +26,15 @@
   </header>
   <section class="cadastro">
     <div class="limite cadastro-limite">
+      <% if (error) { %>
+        <div class="cadastro-erro"><%= error %></div>
+      <% } %>
       <h2 class="cadastro-titulo">Tela de cadastro</h2>
       <form class="cadastro-formulario" action="/cadastro/cadastrar" method="post">
         <input class="cadastro-formulario-campo" type="text" name="nome" placeholder="Nome" required>
         <input class="cadastro-formulario-campo" type="text" name="sobrenome" placeholder="Sobrenome" required>
         <input class="cadastro-formulario-campo" type="text" name="usuario" placeholder="Digite seu usuario" required>
-        <input class="cadastro-formulario-campo" type="text" name="senha" placeholder="Digite sua senha" required>
+        <input class="cadastro-formulario-campo" type="password" name="senha" placeholder="Digite sua senha" required>
         <button class="cadastro-formulario-btn" type="submit">Cadastrar</button>
       </form>
     </div>
